--- a/styles.css
+++ b/styles.css
@@ -84,14 +84,16 @@ body {
   gap: 0.5rem;
 }
 
-.operator {
+.operator,
+.equal {
   display: grid;
   place-content: center;
   border: 1px solid grey;
   border-radius: 0.5rem;
 }
 
-.operator:hover {
+.operator:hover,
+.equal:hover {
   cursor: pointer;
   background-color: #d6d3d1;
 }
